--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div>Pagina de inicio</div>
-        <h2>Hola Mundo</h2>
+        <h2>Exposicion</h2>
         <p>Ingenieria de software</p>
     </body>
 </html>
